--- a/PhongKham/Views/Shared/_Layout.cshtml
+++ b/PhongKham/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
           href="~/css/lib/fontawesome-all.min.css"
            /> *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="~/css/common-bundle.min.css" />
     @* <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/newstyle.css" />
     <link rel="stylesheet" href="~/css/lib/splide.min.css" />
@@ -115,7 +116,7 @@
         <div id="menu">
             <div class="menu-center">
                 <ul id="main-menu" class="sm sm-blue">
-                    <li class="menu-line activem">
+                    <li class="menu-line">
                         @* <a href="index.html">Trang chủ</a> *@
                         @Html.ActionLink("Trang chủ", "Index", "Home")
                     </li>
@@ -502,7 +503,7 @@
         <div id="menus">
             <div class="smenu-menu">
                 <ul id="main-menus" class="sm sm-blue">
-                    <li class="menu-line activem">
+                    <li class="menu-line">
                         @* <a href="index.html">Trang chủ </a> *@
                         @Html.ActionLink("Trang chủ", "Index", "Home")
                     </li>
